--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "next": "9.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.1",
+    "prop-types": "^15.7.2"
   }
 }
