--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@zeit/next-css": "^1.0.1",
     "next": "9.5.0",
+    "next-pwa": "^3.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
