--- a/static/manifest.json
+++ b/static/manifest.json
@@ -65,7 +65,7 @@
     }
   ],
   "theme_color": "#FFFFFF",
-  "background_color": "#076491",
+  "background_color": "#FBB302",
   "display": "fullscreen",
   "orientation": "portrait"
 }
