--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.16.0",
     "@material-ui/core": "^4.11.0",
     "@zeit/next-css": "^1.0.1",
     "next": "9.5.0",
